# CrewAi_Exemples

./: README.md  main.py  pyproject.toml
0_ai_latest_development/: pyproject.toml  report.md
0_ai_latest_development/src/ai_latest_development/: crew.py  main.py
1_news_scraper/: pyproject.toml
1_news_scraper/src/news_scraper/: crew.py  main.py
1_news_scraper/src/news_scraper/config/: agents.yaml  tasks.yaml
2_travel_planing/: README.md  pyproject.toml
2_travel_planing/src/travel_planing/: crew.py  main.py
2_travel_planing/src/travel_planing/config/: agents.yaml  tasks.yaml
2_travel_planing/src/travel_planing/tools/: browser_tools.py  calculator_tools.py  search_tools.py
3_game_builder/: README.md  pyproject.toml
3_game_builder/src/game_builder/: crew.py  main.py
