[project]
name = "travel_planing"
version = "0.1.0"
description = "travel_planing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "bs4>=0.0.2",
    "crewai[tools]>=0.159.0,<1.0.0",
    "unstructured>=0.18.14",
]

[project.scripts]
travel_planing = "travel_planing.main:run"
run_crew = "travel_planing.main:run"
train = "travel_planing.main:train"
replay = "travel_planing.main:replay"
test = "travel_planing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
