[project]
name = "game_builder"
version = "0.1.0"
description = "game_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "bs4>=0.0.2",
    "crewai[tools]>=0.175.0,<1.0.0",
]

[project.scripts]
game_builder = "game_builder.main:run"
run_crew = "game_builder.main:run"
train = "game_builder.main:train"
replay = "game_builder.main:replay"
test = "game_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
